--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						Portfolio
 						</h1>
 						<p><strong>IOS Developer</strong> with several self-initiated projects | <strong>Game Developer</strong> with over two years of experience<br />
-						My <strong>projects</strong> are on <strong><a href="https://github.com/samil145">GitHub</a></strong> and more information about my <strong>career</strong> is on <strong><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/">LinkedIn</a></strong>.</p>
+						My <strong>projects</strong> are on <strong><a href="https://github.com/samil145" target="_blank">GitHub</a></strong> and more information about my <strong>career</strong> is on <strong><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/">LinkedIn</a></strong>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -55,8 +55,8 @@
 							<li><a href="generic.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/samil145" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://github.com/samil145" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -123,8 +123,8 @@
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-								<li><a href="https://github.com/samil145" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+								<li><a href="https://github.com/samil145" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
 					</section>
