--- a/generic.html
+++ b/generic.html
@@ -39,8 +39,8 @@
 							<li class="active"><a href="generic.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/samil145" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://github.com/samil145" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -67,9 +67,9 @@
 						<section class="posts">
 							<article>
 								<header>
-									<h2><a href="https://github.com/samil145/Weather_App_SwiftUI">Weather App<br /></a></h2>
+									<h2><a href="https://github.com/samil145/Weather_App_SwiftUI" target="_blank">Weather App<br /></a></h2>
 								</header>
-								<a href="https://github.com/samil145/Weather_App_SwiftUI" class="image fit"><img src="images/Weather App.png" alt="" /></a>
+								<a href="https://github.com/samil145/Weather_App_SwiftUI" target="_blank" class="image fit"><img src="images/Weather App.png" alt="" /></a>
 								<div style="text-align: left;">
 								<p>
 									<ul class="custom-bullets">
@@ -84,15 +84,15 @@
 									</p>
 								</div>
 								<ul class="actions special">
-									<li><a href="https://github.com/samil145/Weather_App_SwiftUI" class="button">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/samil145/Weather_App_SwiftUI" target="_blank" class="button">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<h2><a href="https://github.com/samil145/FBI-Wanted">FBI Wanted App<br /></a></h2>
+									<h2><a href="https://github.com/samil145/FBI-Wanted" target="_blank">FBI Wanted App<br /></a></h2>
 								</header>
 
-								<a href="https://github.com/samil145/FBI-Wanted" class="image fit"><img src="images/FBI Wanted App.png" alt="" /></a>
+								<a href="https://github.com/samil145/FBI-Wanted" target="_blank" class="image fit"><img src="images/FBI Wanted App.png" alt="" /></a>
 
 								<div style="text-align: left;">
 								<p>
@@ -108,14 +108,14 @@
 									</p>
 								</div>
 								<ul class="actions special">
-									<li><a href="https://github.com/samil145/FBI-Wanted" class="button">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/samil145/FBI-Wanted" target="_blank" class="button">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<h2><a href="https://github.com/samil145/Travel_Memory_Journal">Travel Memory Journal<br /></a></h2>
+									<h2><a href="https://github.com/samil145/Travel_Memory_Journal" target="_blank">Travel Memory Journal<br /></a></h2>
 								</header>
-								<a href="https://github.com/samil145/Travel_Memory_Journal" class="image fit"><img src="images/Travel App.png" alt="" /></a>
+								<a href="https://github.com/samil145/Travel_Memory_Journal" target="_blank" class="image fit"><img src="images/Travel App.png" alt="" /></a>
 
 								<div style="text-align: left;">
 									<p>
@@ -129,16 +129,16 @@
 								</div>
 
 								<ul class="actions special">
-									<li><a href="https://github.com/samil145/Travel_Memory_Journal" class="button">View Project</a></li>
+									<li><a href="https://github.com/samil145/Travel_Memory_Journal" target="_blank" class="button">View Project</a></li>
 								</ul>
 
 							</article>
 							<article>
 								<header>
-									<h2><a href="https://github.com/samil145/FireGame">Fire Game<br /></a></h2>
+									<h2><a href="https://github.com/samil145/FireGame" target="_blank">Fire Game<br /></a></h2>
 								</header>
 
-								<a href="https://github.com/samil145/FireGame" class="image fit"><img src="images/Fire Game.png" alt="" /></a>
+								<a href="https://github.com/samil145/FireGame" target="_blank" class="image fit"><img src="images/Fire Game.png" alt="" /></a>
 
 								<div style="text-align: left;">
 									<p>
@@ -151,15 +151,15 @@
 								</div>
 
 								<ul class="actions special">
-									<li><a href="https://github.com/samil145/FireGame" class="button">View Project</a></li>
+									<li><a href="https://github.com/samil145/FireGame" target="_blank" class="button">View Project</a></li>
 								</ul>
 
 							</article>
 							<article>
 								<header>
-									<h2><a href="https://github.com/samil145/Warriors-Last-Stand">Warrior's Last Stand<br /></a></h2>
+									<h2><a href="https://github.com/samil145/Warriors-Last-Stand" target="_blank">Warrior's Last Stand<br /></a></h2>
 								</header>
-								<a href="https://github.com/samil145/Warriors-Last-Stand" class="image fit"><img src="images/Warrior Last Stand.png" alt="" /></a>
+								<a href="https://github.com/samil145/Warriors-Last-Stand" target="_blank" class="image fit"><img src="images/Warrior Last Stand.png" alt="" /></a>
 								<div style="text-align: left;">
 									<p>
 										<ul class="custom-bullets">
@@ -170,14 +170,14 @@
 									</p>
 								</div>
 								<ul class="actions special">
-									<li><a href="https://github.com/samil145/Warriors-Last-Stand" class="button">View Project</a></li>
+									<li><a href="https://github.com/samil145/Warriors-Last-Stand" target="_blank" class="button">View Project</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<h2><a href="https://github.com/samil145/Intellectual-Vacation">Intellectual Vacation<br /></a></h2>
+									<h2><a href="https://github.com/samil145/Intellectual-Vacation" target="_blank">Intellectual Vacation<br /></a></h2>
 								</header>
-								<a href="https://github.com/samil145/Intellectual-Vacation" class="image fit"><img src="images/Intellectual Vacation.png" alt="" /></a>
+								<a href="https://github.com/samil145/Intellectual-Vacation" target="_blank" class="image fit"><img src="images/Intellectual Vacation.png" alt="" /></a>
 								<div style="text-align: left;">
 									<p>
 										<ul class="custom-bullets">
@@ -188,7 +188,7 @@
 									</p>
 								</div>
 								<ul class="actions special">
-									<li><a href="https://github.com/samil145/Intellectual-Vacation" class="button">View Project</a></li>
+									<li><a href="https://github.com/samil145/Intellectual-Vacation" target="_blank" class="button">View Project</a></li>
 								</ul>
 							</article>
 						</section>
@@ -219,13 +219,13 @@
 					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="mailto:samil.bayramli.sb@gmail.com">samil.bayramli.sb@gmail.com</a></p>
+						<p><a href="mailto:samil.bayramli.sb@gmail.com" target="_blank">samil.bayramli.sb@gmail.com</a></p>
 					</section>
 					<section>
 						<h3>Social</h3>
 						<ul class="icons alt">
-							<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/samil145" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/shamil-bayramli-653b00256/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://github.com/samil145" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</section>
 				</section>
