--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h1>Who Am I?</h1>
 								<p><strong>Game Developer</strong> with <strong>2 years experience</strong> and <strong>IOS Developer</strong> with over a year experience with several projects.</p>
 							</header>
-							<div class="image main"><img src="images/me2.jpg" alt="" /></div>
+							<div class="image main"><img src="images/me2.JPG" alt="" /></div>
 
 							<p>
 								For comprehensive information about myself, few more things might be added. I am 20 years old student who studies <strong>Computer Engineering</strong> at Baku Higher Oil School in Azerbaijan. I am currently working for "<i>AZnet Technologies</i>" as a <strong>Game Developer</strong> for over two years.
