index.html changed

--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
 								<ul class="custom-bullets">
 									<li><b>UIKit</b> and <b>SwiftUI</b></li>
 									<li><b>Storyboard</b> and <b>Programmatic</b> methods for UI</li>
-									<li><b>Firebase</b> and <b>Realm</b> for managing databases</li>
-									<li><b>MapKit, CoreAnimation, AVFoundation, SpriteKit, CoreLocation, CoreMotion</b> and more</li>
-									<li><b>API</b> Calls (specifically <b>RESTful API</b>)</li>
+									<li><b>Swift Concurrency</b></li>
+									<li><b>Xcode Instruments</b> with various <b>profiling templates.</b></li>
+									<li><b>MySQL(MAMP)</b>, <b>Firebase</b>, <b>Realm</b> and <b>CoreData</b> for managing databases</li>
+									<li><b>Combine, MapKit, CoreAnimation, AVFoundation, SpriteKit, CoreLocation, CoreMotion</b> and more</li>
+									<li><b>Networking</b> - Handling <b>API</b> Calls (specifically <b>RESTful API</b>)</li>
 									<li><b>Caching</b></li>
-									<li><b>Backend Integration</b></li>
-									<li><b>UI/UX</b></li>
+									<li><b>Backend Integration</b> with <b>Node.js</b> and <b>MySQL</b></li>
+									<li><b>UI/UX</b> (<b>Figma</b> as a tool)</li>
 								</ul>
 							</p>
 
