some other changes

--- a/index.html
+++ b/index.html
@@ -80,6 +80,30 @@
 							</p>
 
 							<p>
+								Before giving specific details about IOS and Game Development, I suppose <b>general software development proficiencies</b> should be mentioned:
+								<ul class="custom-bullets">
+									<li><b>Version Control Systems</b>: Git (used both <b>Github</b> and <b>Gitlab</b>)</li>
+									<li><b>OOP</b></li>
+									<li><b>SOLID</b> Principles</li>
+									<li><b>Architectural Patterns</b>: MVC, MVVM, etc</li>
+									<li><b>Design Patterns</b>: Singleton, Factory, Observer and more</li>
+								</ul>
+							</p>
+
+							<p>
+								It is obvious fact that <b>soft skills</b> are much more essential than hard skills. According to my teammates I worked with, I got feedbacks like:
+								<ul class="custom-bullets">
+									<li><b>Expressive Communicator</b></li>
+									<li>Effective<b> Problem-Solver</b></li>
+									<li><b>Meeting Deadlines</b></li>
+									<li><b>Collaborative Team Member</b></li>
+									<li><b>Motivator</b></li>
+									<li>Adept at <b>Task Prioritization</b></li>
+									<li><b>Creative</b></li>
+								</ul>
+							</p>
+
+							<p>
 								In order to be more specific about my skills and projects, I would like to give more details. Let's take a look at <b>IOS Development</b> projects and skills. I worked with:
 								<ul class="custom-bullets">
 									<li><b>UIKit</b> and <b>SwiftUI</b></li>
@@ -91,6 +115,7 @@
 									<li><b>Networking</b> - Handling <b>API</b> Calls (specifically <b>RESTful API</b>)</li>
 									<li><b>Caching</b></li>
 									<li><b>Backend Integration</b> with <b>Node.js</b> and <b>MySQL</b></li>
+									<li><b>CocoaPods</b></li>
 									<li><b>UI/UX</b> (<b>Figma</b> as a tool)</li>
 								</ul>
 							</p>
