movie hunter code added

--- a/generic.html
+++ b/generic.html
@@ -67,6 +67,24 @@
 						<section class="posts">
 							<article>
 								<header>
+									<h2><a href="https://github.com/samil145/movie-hunter" target="_blank">Movie Hunter<br /></a></h2>
+								</header>
+								<a href="https://github.com/samil145/movie-hunter" target="_blank" class="image fit"><img src="images/Movie Hunter Portfolio.png" alt="" /></a>
+								<div style="text-align: left;">
+								<p>
+									<ul class="custom-bullets">
+										<li>This app is an IOS app about movies and made with <b>UIKit</b>, <b>The Movie Database(TMDB)</b> and <b>Firestore</b>.</li>
+										<li>This app features <b>trending</b> and <b>upcoming</b> movies/TV series. User can <b>search</b> for movies, get <b>detailed information</b> about them and <b>cast & crew</b>, watch <b>trailer</b> of movie and add movies to <b>favorites</b> section.</li>
+										<li>Moreover, this app provides users with <b>authentication system</b>.</li>
+									</ul>
+								</p>
+								</div>
+								<ul class="actions special">
+									<li><a href="https://github.com/samil145/movie-hunter" target="_blank" class="button">VIEW PROJECT</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
 									<h2><a href="https://github.com/samil145/Weather_App_SwiftUI" target="_blank">Weather App<br /></a></h2>
 								</header>
 								<a href="https://github.com/samil145/Weather_App_SwiftUI" target="_blank" class="image fit"><img src="images/Weather App.png" alt="" /></a>
